--- a/labs/lab04/report/Makefile
+++ b/labs/lab04/report/Makefile
@@ -1,28 +1,13 @@
 FILES = $(patsubst %.md, %.docx, $(wildcard *.md))
 FILES += $(patsubst %.md, %.pdf, $(wildcard *.md))
 
-FILTERS =
-OPTIONS =
-PDF_ENGINE =
-PDF_OPTIONS =
-FORMAT_OPTIONS =
-
-FILTERS += -F pandoc-crossref
-PDF_ENGINE += --pdf-engine=lualatex --pdf-engine-opt=--shell-escape
-OPTIONS += --number-sections
-BIB_OPTIONS = --citeproc
-
-
+LATEX_FORMAT =
+FILTER = --filter pandoc-crossref
 %.docx: %.md
-	-pandoc "$<" $(FILTERS) $(OPTIONS) $(BIB_OPTIONS) -o "$@"
-
+-pandoc "$<" $(FILTER) -o "$@"
 %.pdf: %.md
-	-pandoc "$<" $(FILTERS) $(PDF_ENGINE) $(PDF_OPTIONS) $(BIB_OPTIONS) $(FORMAT_OPTIONS) $(OPTIONS) -o "$@"
-
+-pandoc "$<" $(LATEX_FORMAT) $(FILTER) -o "$@"
 all: $(FILES)
-
-
+@echo $(FILES)
 clean:
-	-rm $(FILES) *~
-
-cleanall: clean
+-rm $(FILES) *~
